# myblas

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.rst  meson.build
include/: myblas.h  myblasmm.h
include/myblas/level1/: axpy.h  copy.h  dot.h  nrm2.h
include/myblas/level2/: gemv.h
level1/: axpy.cc  copy.cc  dot.cc  nrm2.cc  nrm2.h  scal.cc  scal.h
level2/: gemv.cc  gemv.h
